Added ServiceBus function and Terraform

--- a/dockercompose/docker-compose.override.yml
+++ b/dockercompose/docker-compose.override.yml
@@ -4,3 +4,7 @@ services:
   azfunction.http:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+
+  azfunction.servicebus:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
